<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.techathon2014.paypermeter.ReportDriver" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/confirm_report_msg"
        android:textSize="24sp" />

    <Button
        android:id="@+id/takepic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fillform"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/fillform"
        android:layout_marginBottom="33dp"
        android:text="@string/pic"
        android:onClick="uploadOrTake"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/takepic"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/or"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/fillform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginBottom="47dp"
        android:text="@string/form" 
        android:onClick="TextComplaint"/>

</RelativeLayout>